# token-sender-contract

./: .gitignore  CHANGELOG.md  README.md  debugging  mint.plutus  pparams.json  token-sender-contract.cabal  token_meta.json  tx.signed  tx.unsigned
app/: make-datum.hs  make-policy.hs  make-pool-datum.hs  token-policy.hs
scripts/: create-token-sale.sh  make-addr.sh  make-datum.sh  make-policy.sh  mint-token-cli.sh  purchase-token.sh  query-keyP.sh  query-keyS.sh  query-keyU.sh  trans.sh
src/: OnChain.hs  Token.hs  Utils.hs  make-policy.hs
