cabal-version:      2.4
name:               token-sender-contract
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md


-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
    exposed-modules:   OnChain, Token, Utils
    hs-source-dirs:    src
    -- Modules included in this executable, other than Main.
    -- other-modules:      Token, Utils

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base ^>=4.14.3.0,
                        aeson -any,
                        bytestring -any,
                        containers -any,
                        freer-extras -any,
                        playground-common -any,
                        plutus-contract -any,
                        plutus-ledger -any,
                        plutus-ledger-api -any,
                        plutus-ledger-constraints -any,
                        plutus-tx -any,
                        plutus-tx-plugin -any,
                        plutus-script-utils -any,
                        text -any,
                        lens -any,
                        cardano-api -any, 
                        cardano-binary -any,
                        cardano-crypto-class -any,
                        cardano-ledger-core -any,
                        --additionals
                        serialise -any,
                        base16-bytestring,
                        data-default,
                        openapi3
    default-language: Haskell2010



executable make-policy
    main-is:          make-policy.hs
    hs-source-dirs:    app
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base ^>=4.14.3.0,
                        aeson -any,
                        token-sender-contract,
                        bytestring -any,
                        containers -any,
                        freer-extras -any,
                        playground-common -any,
                        plutus-contract -any,
                        plutus-ledger -any,
                        plutus-ledger-api -any,
                        plutus-ledger-constraints -any,
                        plutus-tx -any,
                        plutus-tx-plugin -any,
                        plutus-script-utils -any,
                        text -any,
                        lens -any,
                        cardano-api -any, 
                        cardano-binary -any,
                        cardano-crypto-class -any,
                        cardano-ledger-core -any,
                        --additionals
                        serialise -any,
                        base16-bytestring,
                        data-default,
                        openapi3
    default-language: Haskell2010



executable make-datum
    main-is:          make-datum.hs
    hs-source-dirs:    app
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base ^>=4.14.3.0,
                        aeson -any,
                        token-sender-contract,
                        bytestring -any,
                        containers -any,
                        freer-extras -any,
                        playground-common -any,
                        plutus-contract -any,
                        plutus-ledger -any,
                        plutus-ledger-api -any,
                        plutus-ledger-constraints -any,
                        plutus-tx -any,
                        plutus-tx-plugin -any,
                        plutus-script-utils -any,
                        text -any,
                        lens -any,
                        cardano-api -any, 
                        cardano-binary -any,
                        cardano-crypto-class -any,
                        cardano-ledger-core -any,
                        --additionals
                        serialise -any,
                        base16-bytestring,
                        data-default,
                        openapi3
    default-language: Haskell2010

executable token-policy
  main-is: token-policy.hs
  hs-source-dirs:      app
  build-depends:        base ^>=4.14.3.0,
                        aeson -any,
                        token-sender-contract,
                        bytestring -any,
                        containers -any,
                        freer-extras -any,
                        playground-common -any,
                        plutus-contract -any,
                        plutus-ledger -any,
                        plutus-ledger-api -any,
                        plutus-ledger-constraints -any,
                        plutus-tx -any,
                        plutus-tx-plugin -any,
                        plutus-script-utils -any,
                        text -any,
                        lens -any,
                        cardano-api -any, 
                        cardano-binary -any,
                        cardano-crypto-class -any,
                        cardano-ledger-core -any,
                        --additionals
                        serialise -any,
                        base16-bytestring,
                        data-default,
                        openapi3

executable token-name
  main-is: token-name.hs
  hs-source-dirs:      app
  build-depends:        base ^>=4.14.3.0,
                        aeson -any,
                        token-sender-contract,
                        bytestring -any,
                        containers -any,
                        freer-extras -any,
                        playground-common -any,
                        plutus-contract -any,
                        plutus-ledger -any,
                        plutus-ledger-api -any,
                        plutus-ledger-constraints -any,
                        plutus-tx -any,
                        plutus-tx-plugin -any,
                        plutus-script-utils -any,
                        text -any,
                        lens -any,
                        cardano-api -any, 
                        cardano-binary -any,
                        cardano-crypto-class -any,
                        cardano-ledger-core -any,
                        --additionals
                        serialise -any,
                        base16-bytestring,
                        data-default,
                        openapi3
